[Extensions + Cocoa] Ensure dev mode bubble has cancel button

The dev mode extension bubble does not have a close button ('x') on
cocoa, but does on views. This means that it should not have a cancel
button on views (since it would be redundant with the 'x'), but it
should on cocoa (since otherwise there's no way to close it, short of
hitting the escape key).

It looks like there was logic to try and ensure that the cocoa bubble
always had a cancel button, but it was insufficient, since it uses
MAC_VIEWS_BROWSER to check. However, MAC_VIEWS_BROWSER may be true,
while Cocoa UI is still shown. This means that the Cocoa bubble may
be shown without a cancel button, which is very bad (since it is
exceedingly hard to close).

Add the dismiss button back in for non-views-enabled mac builds.

Bug: 838768

Change-Id: I61cf06bb3612607462fff28b72e4bfdd156a017b
Reviewed-on: https://chromium-review.googlesource.com/1038231
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555668}