chrome/browser/extensions/dev_mode_bubble_delegate.cc
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "extensions/browser/extension_prefs.h"
 #include "extensions/browser/extension_system.h"
 #include "ui/base/l10n/l10n_util.h"
+#include "ui/base/material_design/material_design_controller.h"
 #include "ui/base/ui_features.h"
 
 namespace extensions {
@@ -78,11 +79,12 @@ base::string16 DevModeBubbleDelegate::GetActionButtonLabel() const {
 base::string16 DevModeBubbleDelegate::GetDismissButtonLabel() const {
 // TODO(https://crbug.com/671656): Keep the cancel button on MACOSX unless
 // using views or the Cocoa version is updated.
-#if defined(OS_MACOSX) && !BUILDFLAG(MAC_VIEWS_BROWSER)
-  return l10n_util::GetStringUTF16(IDS_CANCEL);
-#else
-  return base::string16();
+#if defined(OS_MACOSX)
+  if (!ui::MaterialDesignController::IsSecondaryUiMaterial())
+    return l10n_util::GetStringUTF16(IDS_CANCEL);
 #endif
+
+  return base::string16();
 }
 
 bool DevModeBubbleDelegate::ShouldCloseOnDeactivate() const {
